# pronunciation-error-detection

./: .gitignore  .pre-commit-config.yaml  GITHUB_ACCESS.md  NLP_FOCUS_ROADMAP.md  NLP_PROJECT_REPORT.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: infra-recommendations.md  project-report.md
examples/: 01_text_alignment_example.py
notebooks/: README.md  first.ipynb
ped/: __init__.py  asr.py  g2p.py  metrics.py  pipeline.py  text.py
scripts/: run_text_alignment.py
tests/: test_text_and_metrics.py
